# olymp-sandbox

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  Makefile.msys  README.md  SPRINTS.md  TODO.md  compilation  compile-config.json  compile.php  git-usage.md  opencode.json
.github/skills/brainstorming/: SKILL.md
.github/skills/cpp-developer/: SKILL.md
.github/skills/devops-engineer/: SKILL.md
.github/skills/problem-decomposer/: SKILL.md
.github/skills/test-writer/: SKILL.md
.github/workflows/: build.yml
.opencode/skills/architect/: SKILL.md
.opencode/skills/linux-cpp-developer/: SKILL.md
.opencode/skills/test-scenario-writer/: SKILL.md
.opencode/skills/windows-cpp-developer/: SKILL.md
doc/: memory_measurement_2.md  thread_measurement.md
docs/: architecture.md  memory_measurement_1.md  troubleshooting.md
examples/check_isolation/: check_isolation.cpp
examples/example01/: example01.cpp  readme.md
examples/example02/: arguments.cpp
examples/example03/: issue1.cpp
examples/testapp/: testapp.cpp
manager/: DB.php  FooTest.php  LanguageConfig.php  config.php  fileManager.php  index.php  threadManager.php
process_manager/: Makefile  defs.h  functions.cpp  process_manager.cpp  process_manager.h  processtime.cpp  procman.cpp
solutions/: compile.php
src/: .olymp-sandbox.cpp.swp  Makefile  config.cpp  config.hpp  constants.cpp  definitions.cpp  definitions.h  definitions.hpp  functions.cpp  linux.cpp  logger.cpp  logger.hpp  main.cpp  makefile  olymp-sandbox  olymp-sandbox.cpp  process_manager.cpp  process_manager.hpp  result_info.cpp  result_info.hpp  test  test.cpp  test_sample.cpp  testos.cpp  windows.cpp
src/manager/: Config.php  DB.php  FileManager.php  FooTest.php  LanguageConfig.php  ThreadManager.php  compile-config.json  manager.php
src/manager/mc/: logger.php
src/sandbox/: config.hpp  constants.cpp  definitions.cpp  definitions.h  functions.cpp  linux.cpp  olymp-sandbox.cpp  windows.cpp
testfiles/: input01.txt  input02.txt  input03.txt  input04.txt  input05.txt
tests/: test_config.cpp  test_definitions.cpp  test_integration.cpp  test_process_manager.cpp  test_result_info.cpp
